syntax = "proto3";

message Bounds {
    float north = 1; // 0-5
    float south = 2; // 5-10
    float west = 3; // 10-15
    float east = 4; // 15-20
}

enum Service {
    PASSENGER = 0;
    CARGO = 1;
    MILITARY_AND_GOVERNMENT = 2;
    BUSINESS_JETS = 3;
    GENERAL_AVIATION = 4;
    HELICOPTERS = 5;
    LIGHTER_THAN_AIR = 6;
    GLIDERS = 7;
    DRONES = 8;
    GROUND_VEHICLES = 9;
    OTHER_SERVICE = 10;
    NON_CATEGORIZED = 11;
}

enum DataSource {
    ADSB = 0;
    MLAT = 1;
    FLARM = 2;
    FAA = 3;
    ESTIMATED = 4;
    SATELLITE = 5;
    OTHER_DATA_SOURCE = 6;
    UAT = 7;
    SPIDERTRACKS = 8;
    AUS = 9;
}

enum TrafficType {
    NONE = 0;
    GROUND_ONLY = 1;
    AIRBORNE_ONLY = 2;
    ALL = 3;
}

message Settings {
    // string sourcesList = 1; // 0-12
    // string servicesList = 2; // 12-16
    repeated DataSource sources_list = 1;
    repeated Service services_list = 2;
    TrafficType traffic_type = 3; // 26-28, default=3, int32
}

message FiltersList {
    message Airline {
        string icao = 1; // CPA
        int32 type = 2; // default=0
    }

    // repeated AltitudeRange altitude_ranges_list = 1;
    // repeated SpeedRange speed_ranges_list = 2;
    repeated Airline airlines_list = 3;
    // repeated CallSign callsigns_list = 4;
    // repeated Radar radars_list = 5;
    // repeated Reg regs_list = 6;
    // repeated Airport airports_list = 7;
    // repeated Flight flights_list = 8;
    // repeated Type types_list = 9;
    // repeated BirthYearRange birth_year_ranges_list = 10;
    // repeated Squawk squawks_list = 11;
    // repeated Origin origins_list = 12;
    // repeated Destination destinations_list = 13;
    // repeated Category categories_list = 14;
}

// ChQNw/XgQRVxPU5BHXsUwEIl7NEBQxIcCgoAAQIDBAUGBwgJEgwAAQIDBAUGBwgJCgsYAzABONwLQMBwUgsKA3JlZwoEdHlwZQ==
message LiveFeedRequest {
    message UnknownMsg {}

    Bounds bounds = 1; // 5-27
    Settings settings = 2; // 27-57
    optional FiltersList filters_list = 3;
    // 4: ???
    // 5: ???
    bool stats = 6; // 57-59
    int32 limit = 7; // 59-62, default 1500
    int32 maxage = 8; // 62-65, default 14400
    // 9: ???
    optional UnknownMsg unknown_msg = 10; // possibly: fieldMask?
    optional int32 selected_flightid = 11;
}

message LiveFeedResponse {
    message FlightData {
        int32 flightid = 1; // to hex
        float latitude = 2;
        float longitude = 3;
        int32 heading = 4;
        int32 altitude = 5;
        int32 ground_speed = 6;
        int32 icon = 7;
        int32 status = 8;
        int32 timestamp = 9;
        bool on_ground = 10;
        string callsign = 11;
        DataSource source = 12;
    }

    message ExtraInfo {
        message Stats {
            DataSource source = 1;
            int32 count = 2;
        }

        repeated Stats stats_list = 1;
    }

    repeated FlightData flights_list = 1;
    ExtraInfo extra_info = 2;
    // extra flight info = 3
}